chore: Add support for generating encrypted private keys